Sat Apr 30 03:25:53 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* test/io/wait/test_io_wait.rb: New. for testing ext/io/wait.
	  the patch was written by Eric Wong. [Feature #4531]

Thu Apr 28 15:32:53 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/dl/test_base.rb (DL::LIBC_SO): its always msvc*.dll on
	  mswin/mingw.

Wed Apr 27 07:42:44 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (STRIP): use proper toolchain.  based on a patch
	  from Jon Forums at [ruby-core:35909].  fixes #4617

Wed Apr 27 00:51:01 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_truncate): fix function.

	* include/ruby/win32.h (ftruncate, truncate, ftello, fseeko): non-64
	  versions on mingw are useless because they use int32_t.  fixes #4564

Mon Apr 25 21:31:36 2011  Nobuhiro Iwamatsu  <iwamatsu@nigauri.org>

	* ext/openssl/extconf.rb: Should check SSLv2_*method.
	  openssl compiled with "no-ssl2" the extconf don't fail
	  when running `make' having this compilation errors.
	  Patched by Laurent Arnoud. fixes #4562, #4556

Mon Apr 25 20:53:32 2011  Tajima, Akio <artonx@yahoo.co.jp>

	* win32/win32.c (kill): accept 0 only sig is SIGINT #4596

Mon Apr 25 19:59:47 2011  Tajima, Akio <artonx@yahoo.co.jp>

	* win32/win32.c (kill): accept 0 as pid, fixes #4596

Mon Apr 25 19:59:47 2011  Tajima, Akio <artonx@yahoo.co.jp>

	* win32/win32.c (kill): accept 0 as pid, fixes #4596

Fri Apr 22 11:49:49 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/xmlrpc/create.rb (XMLRPC::Create#conv2value):
	  XML-RPC's int is 32bit int, and Fixnum also may be beyond 32bit.

Fri Apr 22 04:16:14 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/parser.c (parse): strings from psych have proper taint
	  markings.

	* test/psych/test_tainted.rb: test for string taint

Thu Apr 21 01:01:28 2011  Masaya Tarui  <tarui@ruby-lang.org>

	* win32/win32.c (CreateChild): maximum length of lpCommandLine is